kubernetes/auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: objaverse-auth-service
spec:
  selector:
    app: objaverse-auth
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
