kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: objaverse-web-service
spec:
  selector:
    app: objaverse-web
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
